# hapticComponent

hapticComponent/: CMakeLists.txt  README.txt
hapticComponent/cmake/Modules/: FindCoin3D.cmake  FindOpenCV.cmake  FindOpenCV_2_3_1.cmake  FindOpenCV_2_4_5.cmake  FindOpenGL.cmake  FindOpenHaptics.cmake  OpenCVConfig.cmake
hapticComponent/exampleHowtoUse/: CMakeLists.txt
hapticComponent/exampleHowtoUse/cmake/Modules/: Find3Dpointer.cmake
hapticComponent/exampleHowtoUse/src/: CMakeLists.txt  testHapticComponent.cpp  testStereoCameraComponent.cpp
hapticComponent/include/: InterfaceHaptic.hpp  commonHapticComponent.h  haptic.h
hapticComponent/src/: CMakeLists.txt  HapticAccess.cpp  HapticAccess.h  InterfaceHaptic.hpp  commonHapticComponent.h  haptic.cpp  haptic.h
